fix: word-break:keep-all, timeline grid text-align

--- a/frontend/kezuler-fe/src/styles/common/TimeLineGrid.scss
+++ b/frontend/kezuler-fe/src/styles/common/TimeLineGrid.scss
@@ -53,6 +53,7 @@
   justify-content: right;
   align-items: flex-end;
   position: relative;
+  text-align: left;
 
   @media (max-width: 330px) {
     display: block;
